<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/dialogPadding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/OriginPlace"
        android:hint="@string/origin_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/DestinationPlace"
        android:hint="@string/destination_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/Country"
        android:hint="@string/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/OutBoundPartialDate"
        android:hint="@string/out_bound_partial_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/Currency"
        android:hint="@string/currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/Locale"
        android:hint="@string/locale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/SendRequestBtn"
        android:text="@string/sendRequestBtn"
        android:textColor="@color/whiteGray"
        android:backgroundTint="@color/colorAccent"
        android:layout_margin="@dimen/btnMargin"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>