<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/dialogPadding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/FromPrice"
        android:hint="@string/min_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/ToPrice"
        android:hint="@string/max_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/Carrier"
        android:hint="@string/carrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/ApplyFiltersBtn"
        android:text="@string/apply_filter"
        android:textColor="@color/whiteGray"
        android:backgroundTint="@color/colorAccent"
        android:layout_margin="@dimen/btnMargin"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>